<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.ytrsoft</groupId>
  <artifactId>jdesktop</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>jdesktop</name>

  <properties>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.formdev</groupId>
      <artifactId>flatlaf</artifactId>
      <version>3.4.1</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>com.akathist.maven.plugins.launch4j</groupId>
        <artifactId>launch4j-maven-plugin</artifactId>
        <version>2.1.1</version>
        <executions>
          <execution>
            <id>l4j-clui</id>
            <phase>package</phase>
            <goals>
              <goal>launch4j</goal>
            </goals>
            <configuration>
              <headerType>gui</headerType>
              <outfile>${project.build.directory}/startup.exe</outfile>
              <jar>${project.build.directory}/${project.build.finalName}.jar</jar>
              <icon>${project.basedir}/src/main/resources/app.ico</icon>
              <errTitle>Error Title</errTitle>
              <classPath>
                <mainClass>com.ytrsoft.Startup</mainClass>
                <addDependencies>true</addDependencies>
                <preCp>anything</preCp>
              </classPath>
              <jre>
                <minVersion>1.8.0</minVersion>
                <bundledJre64Bit>false</bundledJre64Bit>
                <bundledJreAsFallback>false</bundledJreAsFallback>
                <jdkPreference>preferJdk</jdkPreference>
                <initialHeapSize>128</initialHeapSize>
                <maxHeapSize>1024</maxHeapSize>
                <path>./jre</path>
              </jre>
              <versionInfo>
                <fileVersion>1.0.0.0</fileVersion>
                <txtFileVersion>1.0</txtFileVersion>
                <fileDescription>startup</fileDescription>
                <copyright>ytrsoft</copyright>
                <productVersion>1.0.0.0</productVersion>
                <txtProductVersion>startup</txtProductVersion>
                <productName>startup</productName>
                <internalName>startup</internalName>
                <originalFilename>startup.exe</originalFilename>
              </versionInfo>
            </configuration>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
